# rust-unique_id

./: Cargo.toml  README.md
benches/: compare.rs
src/: lib.rs  random.rs  sequence.rs  string.rs
tests/: unique.rs
