[package]
name = "unique_id"
version = "0.1.7"
authors = ["Simon Johnston <johnstonskj@gmail.com>"]
edition = "2018"
description = "Traits and implementations for unique ID generators."
repository = "https://github.com/johnstonskj/rust-unique_id.git"
license = "MIT/Apache-2.0"
readme = "README.md"
publish = true

[package.metadata.docs.rs]
# This sets the default target to `x86_64-unknown-linux-gnu`
# and only builds that target for documentation.
targets = ["x86_64-unknown-linux-gnu"]

[features]
default = ["random", "sequence", "string"]
random = ["dep:uuid"]
sequence = []
string = ["dep:blob-uuid"]

[dependencies]
blob-uuid = { version = "0.5.0", optional = true }
uuid = { version = "1.17.0", features = ["v4"], optional = true }

[dev-dependencies]
criterion = "0.7.0"

[[bench]]
name = "compare"
harness = false
